--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-merlot
 title: Walnut Weather Service
-description: Weather Service for the Walnut Ridge Acres Farm
+description: Weather Service for the City of Carlisle
